--- a/style.css
+++ b/style.css
@@ -1,17 +1,58 @@
-table {
-    border-collapse: collapse;
+body {
+  background-color: #f3f2e1;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
 }
-th, td {
-    border: 1px solid black;
-    padding: 8px;
-    text-align: center;
+.container {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+  flex-direction: column;
+  gap: 1rem;
+  width: 70%;
+}
+.inputContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.inputContainer p {
+  color: rgb(156, 8, 8);
+  font-weight: bold;
+}
+
+#inputArray {
+  width: 40%;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  border: none;
+}
+
+button {
+  background-color: #17594a;
+  padding: 1rem 2rem;
+  color: white;
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+}
+
+table {
+  border-collapse: collapse;
+}
+th,
+td {
+  border: 1px solid black;
+  padding: 8px;
+  text-align: center;
+  width: 50px;
 }
 .yellow {
-    background-color: yellow;
+  background-color: yellow;
 }
 .blue {
-    background-color: blue;
-}
-.red {
-    background-color: red;
+  background-color: blue;
 }
